--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "framer-motion": "^2.9.5",
     "google-map-react": "^2.1.9",
     "history": "^4.10.1",
+    "html2canvas": "^1.4.1",
     "immutability-helper": "^3.1.1",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.20",
     "rc-tween-one": "^2.7.3",
     "react": "^17.0.1",
@@ -29,6 +31,7 @@
     "react-color": "^2.19.3",
     "react-copy-to-clipboard": "^5.0.2",
     "react-css-theme-switcher": "^0.1.5",
+    "react-csv": "^2.2.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
